JEDIT 3.2 VERSION HISTORY

* Version 3.2pre9

+ New Features

- Keys can now be bound to letter keys without modifiers; eg you can
  bind a macro to '>' that in HTML mode inserts the appropriate closing
  tag automatically. Note that the actual character is not inserted, so
  the macro would need to insert '>' first itself.

+ Enhancements

- Documentation updates
- Improved Python syntax highlighting (Ollie Rutherfurd)

+ Bug Fixes

- Fixed a few bugs in the shortcuts option pane (Dirk Moebius)
- Fixed typo in a tip of the day
- If the text area was too small, it would report a negative number of
  visible lines, which caused problems
- Disabled non-working persistent splits feature, which could have
  caused problems
- Invoking menus using Alt-key mnemonics would insert the mnemonic
  character into the buffer on JDK 1.4
- Fixed long-standing bug in scroll-to-caret bug
- C+. and C+, didn't set the history model of the search bar

+ API Changes

- FileVFS.getPermissions() and setPermissions() methods get and set file
  permissions on Unix. These methods were formely private, now they are
  public and static. They do nothing if jEdit is not being run on a Unix
  platform.
- Minor change to marker behavior to facilitate AStyle and JavaStyle
  plugins (Dirk Moebius)
- JCheckBoxList class moved to org.gjt.sp.jedit.gui package

* Version 3.2pre8

+ New Features

- PV-WAVE syntax highlighting (Ed Stewart)

+ Enhancements

- Improved XSL abbrevs (Ollie Rutherfurd)
- jEditLauncher updates (John Gellene)
- Updated Duplicate_Line and Next_Char macros (John Gellene)
- Improved shortcuts option pane (Dirk Moebius)
- Improved PHP mode
- Middle mouse button paste can now be disabled in the Global Options
  dialog box

+ Neutral

- Only selections created with the mouse are stored in the % register

+ Bug Fixes

- Right mouse button clicks didn't work on all platforms
- Printing didn't work due to a change in 3.2pre7